--- a/public/assets/css/site/base_manager/manage.css
+++ b/public/assets/css/site/base_manager/manage.css
@@ -753,6 +753,7 @@
     display: inline-block;
     width: 66%;
     vertical-align: middle;
+    position: relative;
 }
 
 .add-form-input .form-row .row-input input {
@@ -768,4 +769,15 @@
     width: 96%;
     padding: 5px 2%;
     font-family: OpenSans;
+}
+
+label.error {
+    position: absolute;
+    font-size: 10px;
+    color: red;
+    top: 29px;
+}
+
+.wid-50 {
+    width: 50px;
 }
